# odeza

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
crates/odeza-animation/: Cargo.toml
crates/odeza-animation/src/: lib.rs
crates/odeza-assets/: Cargo.toml
crates/odeza-assets/src/: lib.rs
crates/odeza-audio/: Cargo.toml
crates/odeza-audio/src/: lib.rs
crates/odeza-cli/: Cargo.toml
crates/odeza-cli/src/: lib.rs  main.rs
crates/odeza-core/: Cargo.toml
crates/odeza-core/benches/: ecs_benchmarks.rs  job_system_benchmarks.rs
crates/odeza-core/src/: ecs.rs  job.rs  lib.rs  math.rs  memory.rs  scene.rs  time.rs
crates/odeza-editor/: Cargo.toml
crates/odeza-editor/src/: lib.rs
crates/odeza-physics/: Cargo.toml
crates/odeza-physics/src/: lib.rs
crates/odeza-platform/: Cargo.toml
crates/odeza-platform/src/: audio.rs  filesystem.rs  input.rs  lib.rs  threading.rs  timer.rs  window.rs
crates/odeza-renderer/: Cargo.toml
crates/odeza-renderer/src/: frame_graph.rs  lib.rs  lighting.rs  material.rs  mesh.rs  pipeline.rs  post.rs  raytracing.rs  texture.rs  volumetric.rs
