[workspace]
resolver = "2"
members = [
    "crates/odeza-core",
    "crates/odeza-platform",
    "crates/odeza-renderer",
    "crates/odeza-assets",
    "crates/odeza-editor",
    "crates/odeza-physics",
    "crates/odeza-audio",
    "crates/odeza-animation",
    "crates/odeza-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Sumesh Thakur <sumeshthakr@github.com>"]
repository = "https://github.com/sumeshthakr/odeza"
documentation = "https://github.com/sumeshthakr/odeza"

[workspace.dependencies]
# Core dependencies
thiserror = "2.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"

# Concurrency and threading
crossbeam = "0.8"
rayon = "1.10"
parking_lot = "0.12"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Math and linear algebra
glam = { version = "0.30", features = ["serde"] }

# Platform abstraction
winit = "0.30"
raw-window-handle = "0.6"

# Graphics (wgpu for cross-platform)
wgpu = "24.0"

# Async runtime
tokio = { version = "1.43", features = ["full"] }

# Entity Component System
hecs = "0.10"

# Utility
bitflags = "2.8"
smallvec = "1.14"
ahash = "0.8"
indexmap = "2.7"

# Profiling
tracing = "0.1"
tracing-subscriber = "0.3"

# Testing
criterion = "0.6"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "thin"
codegen-units = 1

[profile.ship]
inherits = "release"
lto = true
strip = true
panic = "abort"
