[package]
name = "odeza-assets"
description = "Asset pipeline and database for Odeza engine"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
odeza-core = { path = "../odeza-core" }

thiserror.workspace = true
anyhow.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true
bincode.workspace = true
ahash.workspace = true
parking_lot.workspace = true
tokio.workspace = true

[dev-dependencies]
