[package]
name = "odeza-audio"
description = "Audio system for Odeza engine"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
odeza-core = { path = "../odeza-core" }
odeza-platform = { path = "../odeza-platform" }

glam.workspace = true
parking_lot.workspace = true

[dev-dependencies]
