[package]
name = "odeza-cli"
description = "Command-line interface for Odeza engine"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "odeza"
path = "src/main.rs"

[dependencies]
odeza-core = { path = "../odeza-core" }
odeza-assets = { path = "../odeza-assets" }

anyhow.workspace = true
log.workspace = true
env_logger.workspace = true
serde.workspace = true
serde_json.workspace = true

clap = { version = "4.5", features = ["derive"] }

[dev-dependencies]
