[package]
name = "odeza-platform"
description = "Platform abstraction layer for Odeza engine"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
odeza-core = { path = "../odeza-core" }

thiserror.workspace = true
anyhow.workspace = true
log.workspace = true
parking_lot.workspace = true
crossbeam.workspace = true
winit.workspace = true
raw-window-handle.workspace = true
tokio.workspace = true
bitflags.workspace = true
glam.workspace = true
wgpu.workspace = true
tracing.workspace = true

[target.'cfg(target_os = "android")'.dependencies]
ndk = "0.9"

[target.'cfg(target_os = "ios")'.dependencies]

[target.'cfg(windows)'.dependencies]
windows = { version = "0.59", features = ["Win32_Foundation", "Win32_System_Threading"] }

[dev-dependencies]
